k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: emergent
  labels:
    app: emergent-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emergent-frontend
  template:
    metadata:
      labels:
        app: emergent-frontend
    spec:
      containers:
        - name: frontend
          image: 10.43.249.111:5000/emergent-frontend:large-upload
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: emergent
  labels:
    app: emergent-frontend
spec:
  selector:
    app: emergent-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
