k8s/registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: emergent
  labels:
    app: registry
spec:
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: registry
  selector:
    app: registry
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: emergent
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:2
          ports:
            - containerPort: 5000
              name: registry
          volumeMounts:
            - name: registry-storage
              mountPath: /var/lib/registry
      volumes:
        - name: registry-storage
          emptyDir: {}
